--- a/WhelpWizard/WhelpWizardPage.xaml
+++ b/WhelpWizard/WhelpWizardPage.xaml
@@ -1,4 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:WhelpWizard" x:Class="WhelpWizard.WhelpWizardPage">
-	<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+	<StackLayout Orientation="Vertical">
+        <Label 
+            VerticalOptions="CenterAndExpand" 
+            HorizontalOptions="Center" 
+            Text="Whelp Wizard" 
+            FontSize="30" 
+        />
+        <StackLayout Orientation="Horizontal">
+            <Button Text="List of Dams" HorizontalOptions="Start" Margin="20, 20, 0, 10"/>
+            <Button Text="Calculator" HorizontalOptions="EndAndExpand" Margin="0, 20, 20, 10"/>
+        </StackLayout>
+    </StackLayout>
 </ContentPage>
