--- a/WhelpWizard/Calculator.xaml
+++ b/WhelpWizard/Calculator.xaml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.Calculator">
-	<StackLayout Orientation="Vertical" Margin="0, 20, 0, 0">
-        <StackLayout Orientation="Vertical">
-            <Label Text="Enter a name" HorizontalOptions="Center" />
-            <Entry HorizontalOptions="CenterAndExpand" WidthRequest="250" x:Name="dogName"></Entry>
-        </StackLayout>
-        <StackLayout Orientation="Vertical">
-            <Label Text="Select a date:" HorizontalOptions="Center" VerticalOptions="Center" />
-            <DatePicker HorizontalOptions="Center" x:Name="picker" DateSelected="Handle_DateSelected"></DatePicker>
+	<StackLayout Orientation="Vertical" Margin="0, 10, 0, 0">
+        <StackLayout Orientation="Horizontal">
+            <StackLayout Orientation="Vertical" HorizontalOptions="Start" Margin="10, 0, 0, 0">
+                <Label Text="Enter a name:" HorizontalOptions="Center" />
+                <Entry WidthRequest="175" x:Name="dogName"></Entry>
+            </StackLayout>
+            <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" Margin="0, 0, 10, 0">
+                <Label Text="Select a date:" HorizontalOptions="Center" />
+                <DatePicker HorizontalOptions="Center" x:Name="picker" WidthRequest="175" DateSelected="Handle_DateSelected"></DatePicker>
+            </StackLayout>
         </StackLayout>
         <StackLayout>
             <Label Text="Dam is Due: " HorizontalOptions="Center"/>
             <Label HorizontalOptions="Center" x:Name="calculatedDate" FontAttributes="Bold"/>
         </StackLayout>
         <StackLayout VerticalOptions="FillAndExpand"></StackLayout>
+        <Label Text="Pregnancy Information:" HorizontalOptions="Center" FontAttributes="Bold"/>
         <StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Pregnancy Information:" Margin="20, 0, 0, 0"/>
-                <Stepper HorizontalOptions="EndAndExpand" Margin="0, 0, 20, 0"></Stepper>
-            </StackLayout>
-            <Editor Margin="10, 0, 0, 0" HorizontalOptions="Center"></Editor>
+            <Label HorizontalOptions="Center" x:Name="timeSpan"></Label>
+            <Editor Margin="10, 0, 0, 0" HorizontalOptions="Center" x:Name="pregnancyInfo"></Editor>
         </StackLayout>
-        <StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="0, 0, 20, 5"></Button>
-            </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Button HorizontalOptions="StartAndExpand" Text="Dams" Margin="20, -10, -10, 20"></Button>
+            <Stepper HorizontalOptions="CenterAndExpand" x:Name="stepper" ValueChanged="Handle_ValueChanged" Margin="0, -10, 0, 20"></Stepper>
+            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 20, 20"></Button>
         </StackLayout>
     </StackLayout>
 </ContentPage>
