--- a/WhelpWizard/Calculator.xaml
+++ b/WhelpWizard/Calculator.xaml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.Calculator">
-	<StackLayout Orientation="Vertical" Margin="0, 10, 0, 0">
+	<StackLayout Orientation="Vertical" Margin="0, 10, 0, 0" x:Name="stack">
         <StackLayout Orientation="Horizontal">
             <StackLayout Orientation="Vertical" HorizontalOptions="Start" Margin="10, 0, 0, 0">
                 <Label Text="Enter a name:" HorizontalOptions="Center" />
-                <Entry WidthRequest="175" x:Name="dogName"></Entry>
+                <Entry x:Name="dogName" TextChanged="Handle_TextChanged" WidthRequest="150"></Entry>
             </StackLayout>
             <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" Margin="0, 0, 10, 0">
                 <Label Text="Select a date:" HorizontalOptions="Center" />
-                <DatePicker HorizontalOptions="Center" x:Name="picker" WidthRequest="175" DateSelected="Handle_DateSelected"></DatePicker>
+                <DatePicker HorizontalOptions="Center" x:Name="picker" DateSelected="Handle_DateSelected" WidthRequest="150"></DatePicker>
             </StackLayout>
         </StackLayout>
         <StackLayout>
-            <Label Text="Dam is Due: " HorizontalOptions="Center"/>
+            <Label x:Name="dogIsDue" HorizontalOptions="Center"/>
             <Label HorizontalOptions="Center" x:Name="calculatedDate" FontAttributes="Bold"/>
         </StackLayout>
         <StackLayout VerticalOptions="FillAndExpand"></StackLayout>
         <Label Text="Pregnancy Information:" HorizontalOptions="Center" FontAttributes="Bold"/>
         <StackLayout>
             <Label HorizontalOptions="Center" x:Name="timeSpan"></Label>
-            <Editor Margin="10, 0, 0, 0" HorizontalOptions="Center" x:Name="pregnancyInfo"></Editor>
+            <Editor Margin="10, 0, 0, 0" HorizontalOptions="Center" x:Name="pregnancyInfo" TextColor="Black" ></Editor>
         </StackLayout>
         <StackLayout Orientation="Horizontal">
-            <Button HorizontalOptions="StartAndExpand" Text="Dams" Margin="20, -10, -10, 20"></Button>
+            <Button HorizontalOptions="StartAndExpand" Text="Dams" Margin="20, -10, -10, 20" Clicked="GoToListOfDams"></Button>
             <Stepper HorizontalOptions="CenterAndExpand" x:Name="stepper" ValueChanged="Handle_ValueChanged" Margin="0, -10, 0, 20"></Stepper>
-            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 20, 20"></Button>
+            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 20, 20" Clicked="Handle_Clicked"></Button>
         </StackLayout>
     </StackLayout>
 </ContentPage>
