--- a/WhelpWizard/ListOfDams.xaml
+++ b/WhelpWizard/ListOfDams.xaml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.ListOfDams">
-	<Label Text="Dams list" HorizontalOptions="Center" VerticalOptions="Center"></Label>
+	<ListView x:Name="damsList">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell Text="{Binding DogName}" Detail="{Binding DueDate}"/>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
