--- a/WhelpWizard/Calculator.xaml
+++ b/WhelpWizard/Calculator.xaml
@@ -24,7 +24,7 @@
         <StackLayout Orientation="Horizontal">
             <Button HorizontalOptions="StartAndExpand" Text="Dams" Margin="20, -10, -10, 20" Clicked="GoToListOfDams"></Button>
             <Stepper HorizontalOptions="CenterAndExpand" x:Name="stepper" ValueChanged="Handle_ValueChanged" Margin="0, -10, 0, 20"></Stepper>
-            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 20, 20" Clicked="Handle_Clicked"></Button>
+            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 20, 20" Clicked="Handle_ClickedAsync"></Button>
         </StackLayout>
     </StackLayout>
 </ContentPage>
