--- a/WhelpWizard/DamInformation.xaml
+++ b/WhelpWizard/DamInformation.xaml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.DamInformation">
-	<Label Text="placeholder" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
+    <StackLayout>
+        <StackLayout VerticalOptions="Start">
+            <Label HorizontalOptions="Center" x:Name="damName" FontSize="24" FontAttributes="Bold"></Label>
+            <Label HorizontalOptions="Center" x:Name="pregDateLabel" FontSize="18"></Label>
+            <Stepper HorizontalOptions="Center" x:Name="stepper" ValueChanged="SetDates"></Stepper>
+        </StackLayout>
+       <Label HorizontalOptions="Center" Text="Pregnancy Information:"></Label>
+       <Label HorizontalOptions="Center" x:Name="pregDate"></Label>
+       <Label HorizontalOptions="Center" x:Name="pregInfo" LineBreakMode="WordWrap"></Label>
+    </StackLayout>
 </ContentPage>
