Can get index from menu item now. Also added a variable in the dog class that keeps track of the place in the list it's in.

--- a/WhelpWizard/ListOfDams.xaml
+++ b/WhelpWizard/ListOfDams.xaml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.ListOfDams">
-	<ListView x:Name="damsList" ItemTapped="Handle_ItemTapped">
+	<ListView x:Name="damsList" ItemSelected="Handle_ItemSelected">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell x:Name="cell">
                      <ViewCell.ContextActions>
-                        <MenuItem Clicked="OnMore" CommandParameter="{Binding .}"
-                           Text="More" />
-                        <MenuItem Clicked="OnDelete" CommandParameter="{Binding .}"
-                           Text="Delete" IsDestructive="True" />
+                        <MenuItem CommandParameter="{Binding .}"
+                           Text="Delete" IsDestructive="True" x:Name="delete" Clicked="OnDelete" />
                      </ViewCell.ContextActions>
                      <StackLayout Padding="15,0">
                          <Label Text="{Binding DogName}" />
