Did a lot of design. Looks really good now.

--- a/WhelpWizard/ListOfDams.xaml
+++ b/WhelpWizard/ListOfDams.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.ListOfDams">
-	<ListView x:Name="damsList" ItemTapped="Handle_ItemSelected">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.ListOfDams" Title="List of Dams">
+	<ListView x:Name="damsList" ItemTapped="Handle_ItemSelected" BackgroundColor="#D9DCD6" SeparatorColor="#493843">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell x:Name="cell">
@@ -9,8 +9,8 @@
                            Text="Delete" IsDestructive="True" x:Name="delete" Clicked="OnDelete" />
                      </ViewCell.ContextActions>
                      <StackLayout Padding="15,0">
-                         <Label Text="{Binding DogName}" />
-                        <Label Text="{Binding DueDate}" FontSize="12"></Label>
+                         <Label Text="{Binding DogName}" TextColor="#61988E" />
+                        <Label Text="{Binding DueDate}" TextColor="Black" FontSize="12"></Label>
                      </StackLayout>
                   </ViewCell>
             </DataTemplate>
