--- a/WhelpWizard/Calculator.xaml
+++ b/WhelpWizard/Calculator.xaml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.Calculator">
-	<StackLayout Orientation="Vertical" Margin="0, 10, 0, 0" x:Name="stack">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.Calculator" Title="Add a Dam" BackgroundColor="#D9DCD6">
+	<StackLayout Orientation="Vertical" Margin="0, 10, 0, 0" x:Name="stack" >
         <StackLayout Orientation="Horizontal">
             <StackLayout Orientation="Vertical" HorizontalOptions="Start" Margin="10, 0, 0, 0">
-                <Label Text="Enter a name:" HorizontalOptions="Center" />
-                <Entry x:Name="dogName" TextChanged="Handle_TextChanged" WidthRequest="150"></Entry>
+                <Label Text="Enter a name:" HorizontalOptions="Center" TextColor="#61988E"/>
+                <Entry x:Name="dogName" TextChanged="Handle_TextChanged" WidthRequest="150" HorizontalTextAlignment="Center" BackgroundColor="#D9DCD6"></Entry>
             </StackLayout>
             <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" Margin="0, 0, 10, 0">
-                <Label Text="Select a date:" HorizontalOptions="Center" />
-                <DatePicker HorizontalOptions="Center" x:Name="picker" DateSelected="Handle_DateSelected" WidthRequest="150"></DatePicker>
+                <Label Text="Select a date:" HorizontalOptions="Center" TextColor="#61988E"/>
+                <DatePicker HorizontalOptions="Center" x:Name="picker" DateSelected="Handle_DateSelected" WidthRequest="150" BackgroundColor="#D9DCD6"></DatePicker>
             </StackLayout>
         </StackLayout>
-        <StackLayout>
-            <Label x:Name="dogIsDue" HorizontalOptions="Center"/>
-            <Label HorizontalOptions="Center" x:Name="calculatedDate" FontAttributes="Bold"/>
+        <StackLayout Margin="0, 20, 0, 0">
+            <Label x:Name="dogIsDue" HorizontalOptions="Center" TextColor="#61988E"/>
+            <Label HorizontalOptions="Center" x:Name="calculatedDate" FontAttributes="Bold" Margin="0, -5, 0, 0"/>
         </StackLayout>
 
-        <StackLayout Margin="0, 40, 0, 0">
-            <Label Text="Pregnancy Information:" HorizontalOptions="Center" FontAttributes="Bold" FontSize="20"/>
+        <StackLayout Margin="0, 20, 0, 0">
+            <Label Text="Milestones:" HorizontalOptions="Center" FontAttributes="Bold" FontSize="20" TextColor="#61988E"/>
             <Label HorizontalOptions="Center" x:Name="timeSpan"></Label>
             <Label Margin="10, 0, 0, 0" HorizontalOptions="Center" x:Name="pregnancyInfo" LineBreakMode="WordWrap" FontSize="15"></Label>
         </StackLayout>
         <StackLayout VerticalOptions="FillAndExpand">
-            <!--<Label Text=""></Label>-->
         </StackLayout>
         <StackLayout Orientation="Horizontal">
-            <Button HorizontalOptions="StartAndExpand" Text="Dams" Margin="20, -10, -10, 20" Clicked="GoToListOfDams"></Button>
-            <Stepper HorizontalOptions="CenterAndExpand" x:Name="stepper" ValueChanged="Handle_ValueChanged" Margin="0, -10, 0, 20"></Stepper>
-            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 20, 20" Clicked="Handle_ClickedAsync"></Button>
+            <Button HorizontalOptions="StartAndExpand" Text="More" Margin="12, -10, -10, 20" Clicked="GoToMore" BackgroundColor="#61988E" WidthRequest="63" TextColor="White"></Button>
+            <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
+                <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0"></Button>
+                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0"></Button>
+            </StackLayout>
+            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 12, 20" Clicked="Handle_ClickedAsync" BackgroundColor="#61988E" WidthRequest="63" TextColor="White"></Button>
         </StackLayout>
     </StackLayout>
 </ContentPage>
