--- a/WhelpWizard/DamInformation.xaml
+++ b/WhelpWizard/DamInformation.xaml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.DamInformation">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.DamInformation" Title="Dam Information" BackgroundColor="#D9DCD6">
     <StackLayout>
         <StackLayout VerticalOptions="Start">
-            <Label HorizontalOptions="Center" x:Name="damName" FontSize="24" FontAttributes="Bold"></Label>
+            <Label HorizontalOptions="Center" x:Name="damName" FontSize="24" FontAttributes="Bold" TextColor="#61988E"></Label>
             <Label x:Name="daysLeftLabel" HorizontalOptions="Center"></Label>
             <StackLayout Orientation="Horizontal">
                 <StackLayout HorizontalOptions="Start" Margin="10, 0, 0, 0">
-                    <Label Text="Bred: " FontAttributes="Bold" HorizontalOptions="Center"></Label>
+                    <Label Text="Bred: " FontAttributes="Bold" HorizontalOptions="Center" TextColor="#61988E"></Label>
                     <Label HorizontalOptions="Center" x:Name="breedingDateLabel" FontSize="18"></Label>
                 </StackLayout>
                 <StackLayout HorizontalOptions="EndAndExpand" Margin="0, 0, 10, 0">
-                    <Label Text="Due: " FontAttributes="Bold" HorizontalOptions="Center"></Label>
+                    <Label Text="Due: " FontAttributes="Bold" HorizontalOptions="Center" TextColor="#61988E"></Label>
                     <Label HorizontalOptions="Center" x:Name="pregDateLabel" FontSize="18"></Label>
                 </StackLayout>
             </StackLayout>
-
-            <Stepper HorizontalOptions="Center" x:Name="stepper" ValueChanged="SetDates"></Stepper>
         </StackLayout>
-       <Label HorizontalOptions="Center" Text="Pregnancy Information:" FontAttributes="Bold"></Label>
+       <Label HorizontalOptions="Center" Text="Milestones:" FontAttributes="Bold" TextColor="#61988E" FontSize="20" Margin="0, 10, 0, 0"></Label>
        <Label HorizontalOptions="Center" x:Name="pregDate"></Label>
        <Label HorizontalOptions="Center" x:Name="pregInfo" LineBreakMode="WordWrap"></Label>
+        <StackLayout VerticalOptions="FillAndExpand"></StackLayout>
+        <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
+                <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0"></Button>
+                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0"></Button>
+        </StackLayout>
     </StackLayout>
 </ContentPage>
