--- a/WhelpWizard/Calculator.xaml
+++ b/WhelpWizard/Calculator.xaml
@@ -7,7 +7,7 @@
                 <Entry x:Name="dogName" TextChanged="Handle_TextChanged" WidthRequest="150" HorizontalTextAlignment="Center" BackgroundColor="#D9DCD6"></Entry>
             </StackLayout>
             <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" Margin="0, 0, 10, 0">
-                <Label Text="Select a date:" HorizontalOptions="Center" TextColor="#61988E"/>
+                <Label Text="Date bred:" HorizontalOptions="Center" TextColor="#61988E"/>
                 <DatePicker HorizontalOptions="Center" x:Name="picker" DateSelected="Handle_DateSelected" WidthRequest="150" BackgroundColor="#D9DCD6"></DatePicker>
             </StackLayout>
         </StackLayout>
@@ -24,12 +24,36 @@
         <StackLayout VerticalOptions="FillAndExpand">
         </StackLayout>
         <StackLayout Orientation="Horizontal">
-            <Button HorizontalOptions="StartAndExpand" Text="More" Margin="12, -10, -10, 20" Clicked="GoToMore" BackgroundColor="#61988E" WidthRequest="63" TextColor="White"></Button>
+            <Button HorizontalOptions="StartAndExpand" Text="More" Margin="12, -10, -10, 20" Clicked="GoToMore" BackgroundColor="#61988E" WidthRequest="63" TextColor="White">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                    </OnPlatform>
+                </Button.FontFamily>
+            </Button>
             <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
-                <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0"></Button>
-                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0"></Button>
+                <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0">
+                    <Button.FontFamily>
+                        <OnPlatform x:TypeArguments="x:String">
+                            <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                        </OnPlatform>
+                    </Button.FontFamily>
+                </Button>
+                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0">
+                    <Button.FontFamily>
+                        <OnPlatform x:TypeArguments="x:String">
+                            <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                        </OnPlatform>
+                    </Button.FontFamily>
+                </Button>
             </StackLayout>
-            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 12, 20" Clicked="Handle_ClickedAsync" BackgroundColor="#61988E" WidthRequest="63" TextColor="White"></Button>
+            <Button HorizontalOptions="EndAndExpand" Text="Save" Margin="-10, -10, 12, 20" Clicked="Handle_ClickedAsync" BackgroundColor="#61988E" WidthRequest="63" TextColor="White">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                    </OnPlatform>
+                </Button.FontFamily>
+            </Button>
         </StackLayout>
     </StackLayout>
 </ContentPage>
