--- a/WhelpWizard/DamInformation.xaml
+++ b/WhelpWizard/DamInformation.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.DamInformation" Title="Dam Information" BackgroundColor="#D9DCD6">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.DamInformation" Title="Milestones" BackgroundColor="#D9DCD6">
     <StackLayout>
         <StackLayout VerticalOptions="Start">
             <Label HorizontalOptions="Center" x:Name="damName" FontSize="24" FontAttributes="Bold" TextColor="#61988E"></Label>
@@ -17,11 +17,23 @@
         </StackLayout>
        <Label HorizontalOptions="Center" Text="Milestones:" FontAttributes="Bold" TextColor="#61988E" FontSize="20" Margin="0, 10, 0, 0"></Label>
        <Label HorizontalOptions="Center" x:Name="pregDate"></Label>
-       <Label HorizontalOptions="Center" x:Name="pregInfo" LineBreakMode="WordWrap"></Label>
+       <Label HorizontalOptions="Center" x:Name="pregInfo" LineBreakMode="WordWrap" FontSize="15"></Label>
         <StackLayout VerticalOptions="FillAndExpand"></StackLayout>
         <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
-                <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0"></Button>
-                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0"></Button>
+            <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                    </OnPlatform>
+                </Button.FontFamily>
+            </Button>
+                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0">
+                    <Button.FontFamily>
+                        <OnPlatform x:TypeArguments="x:String">
+                            <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                        </OnPlatform>
+                    </Button.FontFamily>
+                </Button>
         </StackLayout>
     </StackLayout>
 </ContentPage>
