--- a/WhelpWizard/DamInformation.xaml
+++ b/WhelpWizard/DamInformation.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.DamInformation" Title="Milestones" BackgroundColor="#D9DCD6">
-    <StackLayout>
+    <StackLayout Margin="0, 10, 0, 0">
         <StackLayout VerticalOptions="Start">
             <Label HorizontalOptions="Center" x:Name="damName" FontSize="24" FontAttributes="Bold" TextColor="#61988E"></Label>
             <Label x:Name="daysLeftLabel" HorizontalOptions="Center"></Label>
@@ -15,7 +15,7 @@
                 </StackLayout>
             </StackLayout>
         </StackLayout>
-       <Label HorizontalOptions="Center" Text="Milestones:" FontAttributes="Bold" TextColor="#61988E" FontSize="20" Margin="0, 10, 0, 0"></Label>
+       <Label HorizontalOptions="Center" Text="Milestones:" FontAttributes="Bold" TextColor="#61988E" FontSize="18" Margin="0, 10, 0, 0"></Label>
        <Label HorizontalOptions="Center" x:Name="pregDate"></Label>
        <Label HorizontalOptions="Center" x:Name="pregInfo" LineBreakMode="WordWrap" FontSize="15"></Label>
         <StackLayout VerticalOptions="FillAndExpand"></StackLayout>
@@ -27,13 +27,20 @@
                     </OnPlatform>
                 </Button.FontFamily>
             </Button>
-                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0">
-                    <Button.FontFamily>
-                        <OnPlatform x:TypeArguments="x:String">
-                            <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
-                        </OnPlatform>
-                    </Button.FontFamily>
-                </Button>
+            <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                    </OnPlatform>
+                </Button.FontFamily>
+            </Button>
+            <!--<Button Text="Share" BackgroundColor="#61988E" TextColor="White" WidthRequest="80" HorizontalOptions="End">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                    </OnPlatform>
+                </Button.FontFamily>
+            </Button>-->
         </StackLayout>
     </StackLayout>
 </ContentPage>
