--- a/WhelpWizard/DamInformation.xaml
+++ b/WhelpWizard/DamInformation.xaml
@@ -19,28 +19,37 @@
        <Label HorizontalOptions="Center" x:Name="pregDate"></Label>
        <Label HorizontalOptions="Center" x:Name="pregInfo" LineBreakMode="WordWrap" FontSize="15"></Label>
         <StackLayout VerticalOptions="FillAndExpand"></StackLayout>
-        <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
-            <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0">
+        <StackLayout Orientation="Horizontal">
+            <Button HorizontalOptions="StartAndExpand" Text="More" Margin="12, -10, -10, 20" BackgroundColor="#D9DCD6" WidthRequest="63" TextColor="#D9DCD6">
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
                     </OnPlatform>
                 </Button.FontFamily>
             </Button>
-            <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0">
+            <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
+                <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0">
+                    <Button.FontFamily>
+                        <OnPlatform x:TypeArguments="x:String">
+                            <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                        </OnPlatform>
+                    </Button.FontFamily>
+                </Button>
+                <Button Text="Next →" BackgroundColor="#61988E" TextColor="White" x:Name="stepperRight" WidthRequest="80" Clicked="StepperPressedRight" Margin="-2, 0, 0, 0">
+                    <Button.FontFamily>
+                        <OnPlatform x:TypeArguments="x:String">
+                            <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                        </OnPlatform>
+                    </Button.FontFamily>
+                </Button>
+            </StackLayout>
+            <Button HorizontalOptions="EndAndExpand" Text="More" Margin="-10, -10, 12, 20" Clicked="GoToMoreAsync" BackgroundColor="#61988E" WidthRequest="63" TextColor="White">
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
                     </OnPlatform>
                 </Button.FontFamily>
             </Button>
-            <!--<Button Text="Share" BackgroundColor="#61988E" TextColor="White" WidthRequest="80" HorizontalOptions="End">
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String">
-                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
-                    </OnPlatform>
-                </Button.FontFamily>
-            </Button>-->
         </StackLayout>
     </StackLayout>
 </ContentPage>
