--- a/WhelpWizard/VaccineList.xaml
+++ b/WhelpWizard/VaccineList.xaml
@@ -7,7 +7,7 @@
                     <ViewCell x:Name="cell">
                          <ViewCell.ContextActions>
                             <MenuItem CommandParameter="{Binding .}"
-                               Text="Delete" IsDestructive="True" x:Name="delete" Clicked="OnDeleteAsync" />
+                               Text="Delete" IsDestructive="True" x:Name="delete" />
                          </ViewCell.ContextActions>
                          <StackLayout Padding="15,0">
                              <Label Text="{Binding VaccineName}" TextColor="#61988E" />
