--- a/WhelpWizard/VaccineList.xaml
+++ b/WhelpWizard/VaccineList.xaml
@@ -10,7 +10,7 @@
                                Text="Delete" IsDestructive="True" x:Name="delete" />
                          </ViewCell.ContextActions>
                          <StackLayout Padding="15,0">
-                             <Label Text="{Binding VaccineName}" TextColor="#61988E" />
+                             <Label Text="{Binding VaccineNameString}" TextColor="#61988E" />
                             <Label Text="{Binding VaccineDateString}" TextColor="Black" FontSize="12"></Label>
                          </StackLayout>
                       </ViewCell>
