Fixed bugs with vaccnations, started delete but still have bugs

--- a/WhelpWizard/Vaccinations.xaml
+++ b/WhelpWizard/Vaccinations.xaml
@@ -11,7 +11,7 @@
             <Picker BackgroundColor="#D9DCD6" x:Name="vaccineName" WidthRequest="275" HorizontalOptions="CenterAndExpand"></Picker>
             <Label Text="Date of vaccine or medication:" TextColor="#61988E" HorizontalOptions="CenterAndExpand" Margin="0, 0, 0 ,0"></Label>
 
-            <DatePicker x:Name="picker"  BackgroundColor="#D9DCD6" WidthRequest="275" HorizontalOptions="CenterAndExpand"></DatePicker>
+            <DatePicker x:Name="picker" DateSelected="Handle_DateSelected" BackgroundColor="#D9DCD6" WidthRequest="275" HorizontalOptions="CenterAndExpand"></DatePicker>
             <Label Text="Do you want to be reminded?" HorizontalOptions="CenterAndExpand" TextColor="#61988E"></Label>
             <Switch x:Name="switchForRemind" BackgroundColor="#D9DCD6" HorizontalOptions="CenterAndExpand" Toggled="Handle_Toggled"></Switch>
             <StackLayout HorizontalOptions="CenterAndExpand" x:Name="hideElements" IsVisible="false">
