--- a/WhelpWizard/ListOfDams.xaml
+++ b/WhelpWizard/ListOfDams.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.ListOfDams"  Title="List of Dams" BackgroundColor="#D9DCD6">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.ListOfDams"  Title="List of Dams" BackgroundColor="#D9DCD6" Appearing="Handle_Appearing">
     <StackLayout>
         <SearchBar BackgroundColor="#D9DCD6" Placeholder="Search for a dam" TextChanged="Handle_TextChanged" x:Name="searchBar" ></SearchBar>
     	<ListView x:Name="damsList" ItemTapped="Handle_ItemSelected" BackgroundColor="#D9DCD6" SeparatorColor="#493843">
