Notifications are finished, however they still need to be tested.

--- a/WhelpWizard/VaccineList.xaml
+++ b/WhelpWizard/VaccineList.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.VaccineList" Title="Vaccines and Medications">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WhelpWizard.VaccineList" Title="Vaccines and Medications" Appearing="Handle_Appearing">
 	<ContentPage.Content>
         <ListView x:Name="vaccineListShow" ItemTapped="Handle_ItemTapped" BackgroundColor="#D9DCD6" SeparatorColor="#493843">
             <ListView.ItemTemplate>
