--- a/WhelpWizard/Calculator.xaml
+++ b/WhelpWizard/Calculator.xaml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Name="conPage" x:Class="WhelpWizard.Calculator" Title="Add a Dam" BackgroundColor="#D9DCD6">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:local="clr-namespace:WhelpWizard;assembly=WhelpWizard" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Name="conPage" x:Class="WhelpWizard.Calculator" Title="Add a Dam" BackgroundColor="#D9DCD6">
 	<StackLayout Orientation="Vertical" Margin="0, 10, 0, 0" x:Name="stack" >
-        <StackLayout Orientation="Horizontal" BackgroundColor="#61988E" x:Name="editBar" IsVisible="false" Margin="0, -10, 0, 0">
-                <Button Text="╳" HorizontalOptions="Start" FontAttributes="Bold" Margin="10, 20, 0, 0" TextColor="#D9DCD6" Clicked="Handle_Clicked"/>
-                <Label Text="Edit a Dam" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="#D9DCD6" Margin="40, 30, 0, 0"></Label>
-                <StackLayout HorizontalOptions="EndAndExpand"></StackLayout>
+        <StackLayout Orientation="Horizontal" BackgroundColor="#61988E" x:Name="editBar" IsVisible="false" Margin="0, -10, 0, 0" HeightRequest="60">
+                <local:ButtonWithoutShadow Text="╳" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" FontSize="20" BorderColor="Transparent" BackgroundColor="Transparent" Margin="15,15,0,0" FontAttributes="Bold" TextColor="#D9DCD6" Clicked="Handle_Clicked"></local:ButtonWithoutShadow>
+                <Label Text="Edit a Dam" HorizontalOptions="CenterAndExpand" FontSize="16" HorizontalTextAlignment="Start" VerticalOptions="CenterAndExpand" TextColor="#D9DCD6" Margin="-40, 15, 0 ,0"></Label>
             </StackLayout>
         <StackLayout Orientation="Horizontal">
             <StackLayout Orientation="Vertical" HorizontalOptions="Start" Margin="10, 0, 0, 0">
@@ -29,14 +28,14 @@
         <StackLayout VerticalOptions="FillAndExpand">
         </StackLayout>
         <StackLayout Orientation="Horizontal">
-            <Button HorizontalOptions="StartAndExpand" IsVisible="false" Text="More" Margin="12, -10, -10, 20" Clicked="GoToMoreAsync" BackgroundColor="#61988E" WidthRequest="63" TextColor="White">
+            <!--Button HorizontalOptions="StartAndExpand" IsVisible="false" Text="More" Margin="12, -10, -10, 20" Clicked="GoToMoreAsync" BackgroundColor="#61988E" WidthRequest="63" TextColor="White">
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
                     </OnPlatform>
                 </Button.FontFamily>
-            </Button>
-            <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0, -10, 0, 20">
+            </Button>-->
+            <StackLayout HorizontalOptions="StartAndExpand" Orientation="Horizontal" Margin="15, -10, 0, 20">
                 <Button Text="← Prev" BackgroundColor="#61988E" TextColor="White" x:Name="stepperLeft" WidthRequest="80" Clicked="StepperPressedLeft" Margin="0, 0, -2, 0">
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
