--- a/WhelpWizard/Vaccinations.xaml
+++ b/WhelpWizard/Vaccinations.xaml
@@ -3,17 +3,31 @@
 	<ContentPage.Content>
         <StackLayout x:Name="stack">
             <StackLayout Orientation="Horizontal" BackgroundColor="#61988E" HeightRequest="65" Margin="0, -10, 0, 0">
-                <local:ButtonWithoutShadow Text="╳" HorizontalOptions="Start" FontSize="20" VerticalOptions="CenterAndExpand" BorderColor="Transparent" BackgroundColor="Transparent" FontAttributes="Bold" Margin="15, 30, 0, 0" TextColor="#D9DCD6" Clicked="Handle_Clicked"></local:ButtonWithoutShadow>
-                <Label Text="Vaccinations and Medications" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" TextColor="#D9DCD6" Margin="-40, 30, 0, 0"></Label>        
+                <local:ButtonWithoutShadow Text="╳" HorizontalOptions="Start" FontSize="20" VerticalOptions="CenterAndExpand" BorderColor="Transparent" BackgroundColor="Transparent" FontAttributes="Bold" TextColor="#D9DCD6" Clicked="Handle_Clicked">
+                    <local:ButtonWithoutShadow.Margin>
+                        <OnPlatform x:TypeArguments="Thickness">
+                            <On Platform="iOS" Value="15, 30, 0 ,0" />
+                            <On Platform="Android" Value="5, 10, 0, 0" />             
+                        </OnPlatform>
+                    </local:ButtonWithoutShadow.Margin>
+                </local:ButtonWithoutShadow>
+                <Label Text="Vaccinations and Medications" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" TextColor="#D9DCD6">
+                    <Label.Margin>
+                        <OnPlatform x:TypeArguments="Thickness">
+                            <On Platform="iOS" Value="-40, 30, 0, 0" />
+                            <On Platform="Android" Value="-100, 15, 0, 0" />             
+                        </OnPlatform>
+                    </Label.Margin>
+                </Label>        
             </StackLayout>
             <Label Text="Vaccine or medication name:" TextColor="#61988E" HorizontalOptions="CenterAndExpand" Margin="0, 10, 0 ,0"></Label>
             <StackLayout Orientation="Horizontal">
                 <StackLayout.HeightRequest>
                     <OnPlatform x:TypeArguments="x:Double" iOS="30" Android="45"/>
                 </StackLayout.HeightRequest>
-                <Button Text="-" HorizontalOptions="StartAndExpand" BackgroundColor="#61988E" TextColor="#D9DCD6" WidthRequest="40" FontSize="20" Margin="10, 0, 0, 0"></Button>
-                <Picker BackgroundColor="#D9DCD6" x:Name="vaccineName" HorizontalOptions="CenterAndExpand" WidthRequest="215" SelectedIndexChanged="Handle_SelectedIndexChangedAsync"></Picker>
-                <Button Text="+" HorizontalOptions="EndAndExpand" BackgroundColor="#61988E" TextColor="#D9DCD6" FontSize="20" WidthRequest="40" Margin="0, 0, 10, 0"></Button>
+                <Button Text="-" HorizontalOptions="StartAndExpand" BackgroundColor="#61988E" TextColor="#D9DCD6" WidthRequest="40" FontSize="20" Margin="10, 0, 0, 0" Clicked="MinusButtonClicked"></Button>
+                <Picker BackgroundColor="#D9DCD6" x:Name="vaccineName" HorizontalOptions="CenterAndExpand" WidthRequest="215"></Picker>
+                <Button Text="+" HorizontalOptions="EndAndExpand" BackgroundColor="#61988E" TextColor="#D9DCD6" FontSize="20" WidthRequest="40" Margin="0, 0, 10, 0" Clicked="PlusButtonClicked"></Button>
             </StackLayout>
             <Label Text="Date of vaccine or medication:" TextColor="#61988E" HorizontalOptions="CenterAndExpand" Margin="0, 0, 0 ,0"></Label>
             <DatePicker x:Name="picker" DateSelected="Handle_DateSelected" BackgroundColor="#D9DCD6" WidthRequest="250" HorizontalOptions="CenterAndExpand"></DatePicker>
@@ -29,7 +43,13 @@
                 <Editor VerticalOptions="FillAndExpand" x:Name="notes" BackgroundColor="#D9DCD6" HorizontalOptions="CenterAndExpand" WidthRequest="325" TextColor="#61988E"></Editor>
             </StackLayout>
             <StackLayout HeightRequest="1" WidthRequest="325" HorizontalOptions="CenterAndExpand" BackgroundColor="#C0C0C0"></StackLayout>
-            <Button HorizontalOptions="CenterAndExpand" TextColor="White" BackgroundColor="#61988E" Margin="0, 10, 0, 12" WidthRequest="250" Clicked="AddButtonClicked" x:Name="saveButton"></Button>
+            <Button HorizontalOptions="CenterAndExpand" TextColor="White" BackgroundColor="#61988E" Margin="0, 10, 0, 12" WidthRequest="250" Clicked="AddButtonClicked" x:Name="saveButton">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
+                    </OnPlatform>
+                </Button.FontFamily>
+            </Button>
         </StackLayout>
 	</ContentPage.Content>
 </ContentPage>
