--- a/WhelpWizard/WhelpWizardPage.xaml
+++ b/WhelpWizard/WhelpWizardPage.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:WhelpWizard" x:Class="WhelpWizard.WhelpWizardPage" Title="Whelp Wizard" BackgroundColor="#D9DCD6">
-	<StackLayout Orientation="Vertical" BackgroundColor="#D9DCD6">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:WhelpWizard" x:Class="WhelpWizard.WhelpWizardPage" Title="Whelp Wizard" BackgroundColor="#e0e8eb">
+	<StackLayout Orientation="Vertical" BackgroundColor="#e0e8eb">
         <Label 
             VerticalOptions="CenterAndExpand" 
             HorizontalOptions="Center" 
             Text="Whelp Wizard" 
             FontSize="40" 
-            TextColor="#61988E"
+            TextColor="#5cb4c2"
             FontAttributes="None"
+            x:Name="title"
         >
             <Label.FontFamily>
                 <OnPlatform x:TypeArguments="x:String">
@@ -17,14 +18,14 @@
             </Label.FontFamily>
         </Label>
         <StackLayout Orientation="Horizontal">
-            <Button Text="List of Dams" HorizontalOptions="Start" Margin="20, 20, 0, 10" Clicked="Handle_Clicked" BackgroundColor="#61988E" TextColor="White" BorderColor="Transparent" WidthRequest="120">
+            <Button Text="List of Dams" HorizontalOptions="Start" Margin="20, 20, 0, 10" Clicked="Handle_Clicked" BackgroundColor="#5cb4c2" TextColor="White" BorderColor="Transparent" WidthRequest="120">
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
                     </OnPlatform>
                 </Button.FontFamily>
             </Button>
-            <Button Text="Add a Dam" HorizontalOptions="EndAndExpand" Margin="0, 20, 20, 10" Clicked="GoToCalculator" BackgroundColor="#61988E" TextColor="White" BorderColor="Transparent" WidthRequest="110">
+            <Button Text="Add a Dam" HorizontalOptions="EndAndExpand" Margin="0, 20, 20, 10" Clicked="GoToCalculator" BackgroundColor="#5cb4c2" TextColor="White" BorderColor="Transparent" WidthRequest="110">
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <OnPlatform.Android>Hind-Regular.ttf#Hind-Regular</OnPlatform.Android>
